# cloriSearch

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: clorisearch.pc.in  def.h.in
conf/geo_index_test/: index_1.json  index_2.json  index_3.json
conf/interval_index_test/: index_1.json  index_2.json  index_3.json
conf/simple_index_test/: simple_index_1.json  simple_index_10.json  simple_index_11.json  simple_index_2.json  simple_index_3.json  simple_index_4.json  simple_index_5.json  simple_index_6.json  simple_index_7.json  simple_index_8.json  simple_index_9.json
src/: CMakeLists.txt  clorisearch.cc  clorisearch.h  forward_index.cc  forward_index.h  inverted_index.cc  inverted_index.h  query.cc  query.h  term.cc  term.h
src/example/: tutorial.cc  tutorial_geo.cc  tutorial_interval.cc  tutorial_simple.cc
src/indexer/: conjunction_scorer.cc  conjunction_scorer.h  geo_indexer.cc  geo_indexer.h  geohash.cc  geohash_helper.cc  indexer.h  indexer_factory.cc  indexer_factory.h  indexer_manager.cc  indexer_manager.h  interval.h  interval_indexer.h  inverted_list.cc  inverted_list.h  posting_list.cc  posting_list.h  section_indexer.h  simple_indexer.cc  simple_indexer.h
src/internal/: generic_iterator.h  log.cc  log.h  singleton.h
src/internal/cloriskip/: skip_list.h
src/proto/: index_schema.proto  inverted_index.proto
